added current system message and reset button

--- a/force-app/main/default/lwc/adminpage/adminpage.html
+++ b/force-app/main/default/lwc/adminpage/adminpage.html
@@ -1,6 +1,14 @@
 <template>
     <div class="slds-m-around_medium">
-        <lightning-textarea name="systemMessage" label="System Message (Go back to default by writing: Default system message)" value={systemMessage} onchange={handleSystemMessageChange}></lightning-textarea>
-        <lightning-button label="Update System Message" onclick={sendSystemMessageToBackend} class="slds-m-top_small"></lightning-button>
+        <lightning-textarea name="inputSystemMessage" label="Update System Message" 
+                            value={inputSystemMessage} onchange={handleSystemMessageChange}>
+        </lightning-textarea>
+        <lightning-button label="Update System Message" onclick={sendSystemMessageToBackend} 
+                          class="slds-m-top_small">
+        </lightning-button>
+        <lightning-button label="Reset to Default" onclick={resetToDefault} class="slds-m-top_small">
+        </lightning-button>
+        <p class="slds-m-top_medium">Current System Message:</p>
+        <p class="slds-p-horizontal_small">{currentSystemMessage}</p>
     </div>
 </template>
